# QAcTime

./: common.pri  readme.md
src/: CMakeLists.txt  DataBase.pri  QAcTime.rc  database.cpp  database.h  dateselector.cpp  dateselector.h  dateselector.ui  deleteactivitydialog.cpp  deleteactivitydialog.h  deleteactivitydialog.ui  filtermodel.cpp  filtermodel.h  main.cpp  neweditactivitydialog.cpp  neweditactivitydialog.h  neweditactivitydialog.ui  qactime.cpp  qactime.h  qactime.qrc  qactime.ui  src.pro
